--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "react": "^17.0.0",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^17.0.0",
     "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.4"
